p7/tests/t091.err
Semantic error on line 7: Incorrect type for expression in a print statement.  Expressions in print statements must be of type INT, DOUBLE, or STRING.
