p7/tests/t091.gpl
forward animation just_do_it(rectangle cur_rect);

rectangle paddle(animation_block = just_do_it);

on akey
{
  print(just_do_it);
}
